--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 }
 
 body{
-	background-color: #F8F8FF;
+	background-color: #A9A9A9;
 	font-family: "Roboto Slab",times;
 	font-size: 15px;
 	font-weight: light;
@@ -11,14 +11,14 @@ body{
 }
 
 h1{
-	color: #DC143C;
+	color: #990000;
 	font-family: "Roboto Condensed", times;
 	text-transform: uppercase;
 	font-size: 32px;
 }
 
 h2{
-	color: #DC143C;
+	color: #990000;
 	font-family: "Roboto Condensed", times;
 	text-transform: uppercase;
 	font-size: 18px;
@@ -28,7 +28,7 @@ p{
 }
 
 a{
-	color: #A9A9A9;
+	color: #F8F8FF;
   padding: 5px;
 }
 
