--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ h2{
 	color: #990000;
 	font-family: "Roboto Condensed", times;
 	text-transform: uppercase;
-	font-size: 18px;
+	font-size: 16px;
 }
 p{
   	min-width: 200px;
@@ -36,7 +36,8 @@ a{
 
 img.image{
 	border-radius: 15%;
-	display: inline-block;
-	max-width: 200px;
+	display: block;
+	max-width: 150px;
 	padding: 10px;
+	position: center;
 }
