--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li class="active"><a href="blog.html">Blog <span class="sr-only">(current)</span></a></li>
-        <li><a href="Portfolio.html">Portfolio</a></li>
+        <li><a href="portfolio.html">Portfolio</a></li>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
