--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,51 +3,50 @@
 	<head>
 
 		<title>{{ page.title }}</title>
-		<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto+Condensed|Roboto+Slab">
 		
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+		
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
+
+		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+		
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
 
 		<link rel="stylesheet" type="text/css" href="/style.css">
 
 	</head>
 	
 	<body>
-			
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="index.html">Home</a>
-    </div>
+		<nav class="navbar sticky-top navbar-expand-xl navbar-dark bg-dark">
+		  <a class="navbar-brand" href="#">Navbar</a>
+		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+		    <span class="navbar-toggler-icon"></span>
+		  </button>
+		  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+		    <div class="navbar-nav">
+		      <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+		      <a class="nav-item nav-link" href="#">Portfolio</a>
+		      <a class="nav-item nav-link" href="#">Contact</a>
+		    </div>
+		  </div>
+		</nav>
 
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="blog.html">Blog <span class="sr-only">(current)</span></a></li>
-        <li><a href="portfolio.html">Portfolio</a></li>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
-</nav>
+
 			{{ content }}
 
 
 		
-		<div class="footer">
-			<div class="f-head">
-				<h2>social links</h2>
+		<div class="container">
+			<div class="row align-items-center">
+				<img href="https://linkedin.com/in/nicholas-veil" target="_blank"<li>LinkedIn</li></img>
+				<img href="https://stackoverflow.com/users/8492242/nveil?tab=profile" target="_blank"<li>Stack Overflow</li></img> 
+				<img href="https://github.com/nickveil" target="_blank"<li>GitHub</li></img> 
+				<img href="https://twitter.com/NickVeil" target="_blank"<li>Twitter</li></img>
 			</div>
-			<div class="f-list">
-				<a href="https://linkedin.com/in/nicholas-veil" target="_blank"<li>LinkedIn</li></a>
-				<a href="https://stackoverflow.com/users/8492242/nveil?tab=profile" target="_blank"<li>Stack Overflow</li></a> 
-				<a href="https://github.com/nickveil" target="_blank"<li>GitHub</li></a> 
-				<a href="https://twitter.com/NickVeil" target="_blank"<li>Twitter</li></a> 			
-			</div>
+			
+				<div class="row align-items-center copyright">
+					<p>© Nick Veil</p>
+				</div>
 		</div>
 	</body>
 </html>
