--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,14 +3,14 @@
 	<head>
 
 		<title>{{ page.title }}</title>
-		
+		<script src="https://use.fontawesome.com/18d30ff5c0.js"></script>
+
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>	
+
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>			
 		
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
-
-		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-		
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
 
 		<link rel="stylesheet" type="text/css" href="/style.css">
 
@@ -18,16 +18,28 @@
 	
 	<body>
 		<nav class="navbar sticky-top navbar-expand-xl navbar-dark bg-dark">
-		  <a class="navbar-brand" href="#">Navbar</a>
+		  <a class="navbar-brand" href="https://nickveil.github.io/">Home</a>
 		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
 		    <span class="navbar-toggler-icon"></span>
 		  </button>
-		  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-		    <div class="navbar-nav">
-		      <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-		      <a class="nav-item nav-link" href="#">Portfolio</a>
-		      <a class="nav-item nav-link" href="#">Contact</a>
-		    </div>
+		  <div class="collapse navbar-collapse" id="navbarNavDropdown">
+		    <ul class="navbar-nav">
+		      <li class="nav-item active">
+		        <a class="nav-link" href="#">Portfolio<span class="sr-only">(current)</span></a>
+		      </li>
+		      <li class="nav-item">
+		        <a class="nav-link" href="#">Contact</a>
+		      </li>
+		      <li class="nav-item dropdown">
+		        <a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+		          More Info
+		        </a>
+		        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+		          <a class="dropdown-item" href="https://nickveil.github.io/blog.html">Blog</a>
+		          <a class="dropdown-item" href="https://drive.google.com/file/d/0B9pcsEPyoHOma2tFYkZ4eVdaT1U/view?usp=sharing">My Past Life</a>
+		        </div>
+		      </li>
+		    </ul>
 		  </div>
 		</nav>
 
@@ -36,17 +48,25 @@
 
 
 		
-		<div class="container">
-			<div class="row align-items-center">
-				<img href="https://linkedin.com/in/nicholas-veil" target="_blank"<li>LinkedIn</li></img>
-				<img href="https://stackoverflow.com/users/8492242/nveil?tab=profile" target="_blank"<li>Stack Overflow</li></img> 
-				<img href="https://github.com/nickveil" target="_blank"<li>GitHub</li></img> 
-				<img href="https://twitter.com/NickVeil" target="_blank"<li>Twitter</li></img>
-			</div>
-			
-				<div class="row align-items-center copyright">
-					<p>© Nick Veil</p>
+		<div class="container footer">
+			<div class="row footer">
+				<div class="col align-items-center">
+					<div class="links">
+					
+					<a href="https://linkedin.com/in/nicholas-veil"><i class="fa fa-linkedin-square fa-2x"  aria-hidden="true"></i></a>
+					<a href="https://stackoverflow.com/users/8492242/nveil?tab=profile"><i class="fa fa-stack-overflow fa-2x" aria-hidden="true"></i></a>
+					<a href="https://github.com/nickveil"><i class="fa fa-github-square fa-2x" aria-hidden="true"></i></a>
+					<a href="https://twitter.com/NickVeil"><i class="fa fa-twitter-square fa-2x" aria-hidden="true"></i></a>
 				</div>
+
+			
+			
+				<div class="row footer copyright">
+					<div class="col">
+						<p>© 2017 Nick Veil</p>
+					</div>				
+				</div>
+			</div>
 		</div>
 	</body>
 </html>
