--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,10 +27,10 @@
 		  <div class="collapse navbar-collapse" id="navbarNavDropdown">
 		    <ul class="nav">
 		      <li class="nav-item active">
-		        <a class="nav-link" href="#portfolio">Portfolio<span class="sr-only">(current)</span></a>
+		        <a class="nav-link" href="/#portfolio">Portfolio<span class="sr-only">(current)</span></a>
 		      </li>
 		      <li class="nav-item">
-		        <a class="nav-link" href="#contact">Contact</a>
+		        <a class="nav-link" href="/#contact">Contact</a>
 		      </li>
 		      <li class="nav-item dropdown">
 		        <a class="nav-link dropdown-toggle"  id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -62,15 +62,9 @@
 
 		
 		<div class="container footer">
-			<div class="row footer text-center">
 				
-
-			
-			
-				<div class="row footer copyright text-center">
 						<p class="text-center">© 2017 Nick Veil</p>				
-				</div>
-			</div>
+				
 		</div>
 	</body>
 </html>
