--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
 	
 	<body>
 		<nav id="navbar-example2" class="navbar sticky-top navbar-expand-sm navbar-dark bg-dark">
-		  <a class="navbar-brand" href="#">Nick Veil</a>
+		  <a class="navbar-brand" href="https://nickveil.github.io">Nick Veil</a>
 		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
 		    <span class="navbar-toggler-icon"></span>
 		  </button>
@@ -32,25 +32,21 @@
 		      <li class="nav-item">
 		        <a class="nav-link" href="/#contact">Contact</a>
 		      </li>
+		      <li class="nav-item">
+		        <a class="nav-link" href="/blog.html">Blog</a>
+		      </li>
 		      <li class="nav-item dropdown">
 		        <a class="nav-link dropdown-toggle"  id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 		          More Info
 		        </a>
 		        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-		          <a class="dropdown-item" href="https://nickveil.github.io/blog.html">Blog</a>
+
 		          <a class="dropdown-item" href="https://drive.google.com/file/d/0B9pcsEPyoHOma2tFYkZ4eVdaT1U/view?usp=sharing">My Past Life</a>
 		        </div>
 		      </li>
 		    </ul>
 
-				<div class="col align-items-center">
-					<div class="links">
-					
-					<a href="https://linkedin.com/in/nicholas-veil"><i class="fa fa-linkedin-square fa-2x"  aria-hidden="true"></i></a>
-					<a href="https://stackoverflow.com/users/8492242/nveil?tab=profile"><i class="fa fa-stack-overflow fa-2x" aria-hidden="true"></i></a>
-					<a href="https://github.com/nickveil"><i class="fa fa-github-square fa-2x" aria-hidden="true"></i></a>
-					<a href="https://twitter.com/NickVeil"><i class="fa fa-twitter-square fa-2x" aria-hidden="true"></i></a>
-				</div>
+
 
 
 		  </div>
