Worked out other blog posts col

--- a/blog.css
+++ b/blog.css
@@ -45,9 +45,16 @@ p{
 }
 
 strong{
-  color: #aaa;
-
+  color: #007bff;
 }
+/*
+.fixed{
+  position:fixed;
+}
+
+.content{
+  position:relative;
+}*/
 
 .jumbotron {
 
