--- a/_layouts/blog_layout.html
+++ b/_layouts/blog_layout.html
@@ -46,42 +46,34 @@
 		        </div>
 		      </li>
 		    </ul>
-
-
-
-
 		  </div>
 		</nav>
 
-		<div class="container">
-	    <div class="row">
-	        <div class="col-xs-8 content">
-	        	<h1 class="display-2">Past Blog Posts</h1>
-			
-						<ul>{% for post in site.posts %}
-						    <li><span>{{ post.date | date_to_string}}</span>&raquo;
-						      <a href="{{ post.url }}">{{ post.title }}</a>
-						    </li>
-						  {% endfor %}
-						</ul>
-	        </div> 
-	        <div class="col-xs-3 col-xs-offset-1 sidebar-outer" >
-	            <div class="fixed col-xs-3">
-	                <img class="img-responsive"
-	                     src="http://placekitten.com/300/200"/>
+		<div class="container-fluid">
 
-			{{ content }}
-	            </div>
-        	</div>
-	    </div>
-		</div>
+	    <div class="row mt-5">
+
+    	<div class="col-lg-3 col-sm-12 fixed" >
+    	 	<div class='affix'>
+	    		<h3>Other Blog Posts</h3>
+					<ul>{% for post in site.posts %}
+					    <li><span>{{ post.date | date_to_string}}</span>&raquo;
+					      <a href="{{ post.url }}">{{ post.title }}</a>
+					    </li>
+					  {% endfor %}
+					</ul>
+				</div>
+			</div>
+
+    	<div class='col-lg-7 col-sm-12 content'>
+
+        {{ content }}  
+      </div>
+
+       
 
 		</div>
 		
-		<div class="container footer">
-				
-						<p class="text-center">© 2017 Nick Veil</p>				
-				
-		</div>
+
 	</body>
 </html>
