--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,7 +41,7 @@
 		        </a>
 		        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
 
-		          <a class="dropdown-item" href="https://drive.google.com/open?id=1weEekkrbPHH03LlQE8A4bulmPvff2U-W">My Past Life</a>
+		          <a class="dropdown-item" href="https://drive.google.com/file/d/1ixjO4LIea8f5rgJ33wcAPlEQt7McLxLo/view?usp=sharing">My Past Life</a>
 		        </div>
 		      </li>
 		    </ul>
